// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"as" attribute should work as expected 1`] = `
.emotion-0 {
  text-align: center;
  display: block;
  padding: 10px;
  color: red;
  background-color: blue;
}

<section
  as="section"
  class="emotion-0"
>
  Hello
</section>
`;

exports[`can set the theme via an attribute 1`] = `
.emotion-0 {
  text-align: center;
  display: block;
  padding: 10px;
  color: red;
  background-color: white;
}

<div
  class="emotion-0"
  theme="light"
>
  Hello
</div>
`;

exports[`it should apply styles to a component with custom classes and props 1`] = `
.emotion-0 {
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 10px;
  color: red;
  background-color: blue;
}

<main
  as="main"
  class="emotion-0"
>
  Hello
</main>
`;

exports[`it should override styles 1`] = `
.emotion-1 {
  background-color: white;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  text-align: center;
  display: block;
  padding: 10px;
  color: red;
  background-color: blue;
}

<div
  class="emotion-0 emotion-1"
>
  Hello
</div>
`;

exports[`theme injection should work as expected 1`] = `
.emotion-0 {
  text-align: center;
  display: block;
  padding: 10px;
  color: red;
  background-color: white;
}

<div
  class="emotion-0"
>
  Hello
</div>
`;

exports[`withComponent should work as expected 1`] = `
.emotion-0 {
  text-align: center;
  display: block;
  padding: 10px;
  color: red;
  background-color: blue;
}

<aside
  class="emotion-0 emotion-1"
/>
`;
